[gd_scene load_steps=10 format=3 uid="uid://bww5fxa58m582"]

[ext_resource type="Script" path="res://Scripts/cult_mark_spell.gd" id="1_63gv4"]
[ext_resource type="Texture2D" uid="uid://bkfbetj2yki7w" path="res://ArtAssets/Enemies/culist_mark_hit_warning_hit.png" id="1_mp8qb"]

[sub_resource type="CircleShape2D" id="CircleShape2D_kngq5"]
radius = 16.0

[sub_resource type="AtlasTexture" id="AtlasTexture_k7xqy"]
atlas = ExtResource("1_mp8qb")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_hlvy2"]
atlas = ExtResource("1_mp8qb")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_0i52b"]
atlas = ExtResource("1_mp8qb")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_81suu"]
atlas = ExtResource("1_mp8qb")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_qw7jo"]
atlas = ExtResource("1_mp8qb")
region = Rect2(0, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_efquv"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_k7xqy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hlvy2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0i52b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_81suu")
}],
"loop": false,
"name": &"fire",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qw7jo")
}],
"loop": false,
"name": &"warning",
"speed": 5.0
}]

[node name="CultMarkSpell" type="Node2D"]
script = ExtResource("1_63gv4")

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_kngq5")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_efquv")
animation = &"fire"

[node name="Activate" type="Timer" parent="."]
one_shot = true

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="timeout" from="Activate" to="." method="_on_activate_timeout"]
